# scenario-game

./: .gitignore  CMakeLists.txt  Makefile  README.org  calc.c  game.c  game.h  gui.c  scenarios.c  syntax.txt  terminal.c
data/: cote.txt  sample1.txt  sample_game1.txt
include/: scenario.h
src/: calc.c  gui.c  scenario.c  terminal.c
